--- a/AsistenciaUniversitaria.Web/Views/Grupos/Index.cshtml
+++ b/AsistenciaUniversitaria.Web/Views/Grupos/Index.cshtml
@@ -29,9 +29,14 @@
                 <td>@item.Turno</td>
                 <td>@item.Estado</td>
                 <td>
-                    <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.Id">Editar</a>
-                    <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Editar</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Eliminar</a>
+                    <a asp-controller="GrupoEstudiantes" asp-action="Asignar" asp-route-id="@item.Id" class="btn btn-info btn-sm">Asignar Estudiantes</a>
+                    <a asp-controller="Asistencias" asp-action="Tomar" asp-route-grupoId="@item.Id" class="btn btn-success btn-sm">Pasar Asistencia</a>
+                    <a asp-controller="Asistencias" asp-action="Ver" asp-route-grupoId="@item.Id" class="btn btn-outline-secondary btn-sm">Ver Asistencia</a>
                 </td>
+
+
             </tr>
         }
     </tbody>
